agregando box-model con grid-flex

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <!-- ENLACE A ESTILOS -->
   <link rel="stylesheet" href="css/styles.css">
   <!-- ENLACE A ICONOS DE FONTAWESOME -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
-  <!-- ENLACE A FAVICON -->
+  <link
+  rel="stylesheet"
+  href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
+  crossorigin="anonymous">
+<!-- ENLACE A FAVICON -->
   <link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/x-icon">
   <!-- TITULO DEL SITIO WEB -->
   <title>MusicArte - Escuela de Música</title>
@@ -31,8 +34,8 @@
       <input type="checkbox" class="boton-checkbox" id="mi-check">
       <label for="mi-check" class="boton-hamburguesa"><i class="fa fa-bars"></i></label>
            <!-- LOGO -->
-          
-        <label class="logo"><a href="#">MusicArte</a></label>
+           <label class="logo"><a href="index.html">MusicArte</a></label>
+           <label class="logo-2"><a href="index.html">♪</a></label>
         <!-- LISTA DESORDENADA -->
         <ul class="listado">
             <li class="lista"><a href="#" class="active">Inicio</a></li>
@@ -47,18 +50,19 @@
     <!-- FIN HEADER -->
   </header>
 
-  <!-- MAIN PRINCIPAL -->
-  <main class="index">
-    <!-- SECCION TOP -->
-    <div class="section-top">
-      <img src="assets/img/index/h1.jpg"
-        alt="representación artística de un piano en una pintura hiperrealista al óleo">
-      <img src="assets/img/index/h2.png"
-        alt="representación artística de una cantante en una pintura hiperrealista al óleo">
-      <img src="assets/img/index/h3.jpg" alt="representación artística de un violín en una pintura estilo Art-decó">
-      <!-- FIN SECCION TOP -->
-    </div>
+      <!-- SECCION TOP -->
+      <div class="section-top">
+        <img src="assets/img/index/h1.jpg"
+          alt="representación artística de un piano en una pintura hiperrealista al óleo">
+        <img src="assets/img/index/h2.png"
+          alt="representación artística de una cantante en una pintura hiperrealista al óleo">
+        <img src="assets/img/index/h3.jpg" alt="representación artística de un violín en una pintura estilo Art-decó">
+        <!-- FIN SECCION TOP -->
+      </div>
 
+  <!-- MAIN PRINCIPAL -->
+<main id="index">
+  <div class="main">
     <!-- SECCION 1 -->
     <section class="section1">
       <h1>Descubre la <strong>música</strong></h1>
@@ -73,20 +77,7 @@
 
     <!-- SECCION 2 -->
     <section class="section2">
-
-      <div class="divisor-1">
-        <img src="assets/img/index/i1.jpg" alt="un violin apoyado sobre una partitura">
-        <img src="assets/img/index/i2.png" alt="padre e hija practicando canto">
-        <img src="assets/img/index/i3.jpg" alt="padre e hijo practicando piano">
-        <div class="divisor-texto">
-          <h3>Instrumentos</h3>
-          <p>
-            Elige nuestras <strong>clases</strong> de <em>piano</em>,
-            <em>canto</em> y/o <em>violín</em>. ¡Desarrolla tu pasión musical!
-          </p>
-        </div>
-      </div>
-      <div class="divisor-2">
+      <div class="divisor">
         <img src="assets/img/index/j1.jpg" alt="varios micrófonos para cantantes">
         <img src="assets/img/index/j2.jpg" alt="madre e hijo practicando violin">
         <img src="assets/img/index/j3.png" alt="niña practicando piano">
@@ -99,9 +90,21 @@
           </p>
         </div>
       </div>
+      <div class="divisor">
+        <img src="assets/img/index/i1.jpg" alt="un violin apoyado sobre una partitura">
+        <img src="assets/img/index/i2.png" alt="padre e hija practicando canto">
+        <img src="assets/img/index/i3.jpg" alt="padre e hijo practicando piano">
+        <div class="divisor-texto">
+          <h3>Instrumentos</h3>
+          <p>
+            Elige nuestras <strong>clases</strong> de <em>piano</em>,
+            <em>canto</em> y/o <em>violín</em>. ¡Desarrolla tu pasión musical!
+          </p>
+        </div>
+      </div>
     </section>
     <!-- FIN SECCION 2 -->
-
+    
     <!-- SECCION 3 -->
     <section class="section3">
       <div class="divisor1">
@@ -130,7 +133,8 @@
     </section>
 
     <!-- FIN MAIN PRINCIPAL -->
-  </main>
+  </div>
+</main>
 
   <!-- FOOTER -->
   <footer>
@@ -157,6 +161,10 @@
 
   <!-- FIN BODY -->
 </body>
+
+<!-- ENLACE A JAVASCRIPT
+<script src="assets/js/index.js"></script>
+-->
 
 <!-- FIN HTML -->
 
