--- a/pages/canto.html
+++ b/pages/canto.html
@@ -40,8 +40,8 @@
     <input type="checkbox" class="boton-checkbox" id="mi-check">
     <label for="mi-check" class="boton-hamburguesa"><i class="fa fa-bars"></i></label>
          <!-- LOGO -->
-        
-      <label class="logo"><a href="../index.html">MusicArte</a></label>
+         <label class="logo"><a href="../index.html">MusicArte</a></label>
+         <label class="logo-2"><a href="../index.html">♪</a></label>
       <!-- LISTA DESORDENADA -->
       <ul class="listado">
           <li class="lista"><a href="../index.html">Inicio</a></li>
@@ -58,36 +58,50 @@
 
 
     <!-- MAIN PRINCIPAL -->
-    <main class="canto">
+    <main class="canto" id="musica">
       <!-- DIVISOR 1 -->
       <div class="divisor-1">
         <section class="section1">
+          <article class="texto1">
           <h1>Aprende Canto</h1>
           <p>
             Nuestras clases son <em>personalizadas e individuales</em>, lo que garantiza una atención
             exclusiva y un progreso más rápido.
           </p>
+          </article>
           <div class="imagen1">
             <img src="../assets/img/canto/1.jpg" alt="imagen de cantante">
           </div>
         </section>
         <section class="section2">
+          <article class="texto2">
+          <h3>Adultos y Niños</h3>
+          <p>
+            Apto para todas las edades y niveles. Anímate y reserva tu clase para conocernos.
+          </p>
+        </article>
+          <div class="imagen2">
+            <img src="../assets/img/canto/2.jpg" alt="adultos y niños cantando">
+          </div>
+        </section>
+        <section class="section3">
+          <article class="texto3">
           <h3>Sumate a nuestra comunidad</h3>
           <p>
             Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>. Queremos invitarte a que te sumes también en este hermoso viaje.
           </p>
-          <div class="imagen2">
-            <img src="../assets/img/canto/2.jpg" alt="cantante global">
+        </article>
+          <div class="imagen3">
+            <img src="../assets/img/canto/3.jpg" alt="cantante global">
           </div>
         </section>
-  
       </div>
+      
       <!-- DIVISOR 2 -->
       <div class="divisor-2">
         <section class="section3">
           <h3>Reserva tu Clase</h3>
           <img src="../assets/img/profesores/s2.jpg" alt="profesora de canto">
-          <p class="parrafo-1">¡Anímate y coordina una clase con nosotros!</p>
           <a href="contacto.html">¡Quiero mi clase!</a>
           <!-- FIN SECCION 3 -->
         </section>
@@ -121,5 +135,8 @@
     <!-- FIN BODY -->
   </body>
 
+  <!-- ENLACE A JAVASCRIPT 
+  <script src="assets/js/index.js"></script>
+-->
   <!-- FIN HTML -->
 </html>
