--- a/pages/piano.html
+++ b/pages/piano.html
@@ -31,9 +31,8 @@
        <input type="checkbox" class="boton-checkbox" id="mi-check">
       <label for="mi-check" class="boton-hamburguesa"><i class="fa fa-bars"></i></label>
          <!-- LOGO -->
-        
-      <label class="logo"><a href="../index.html">MusicArte</a></label>
-      <!-- LISTA DESORDENADA -->
+         <label class="logo"><a href="../index.html">MusicArte</a></label>
+         <label class="logo-2"><a href="../index.html">♪</a></label>      <!-- LISTA DESORDENADA -->
       <ul class="listdo">
           <li class="lista"><a href="../index.html">Inicio</a></li>
           <li class="lista"><a href="#" class="active">Piano</a></li>
@@ -49,26 +48,41 @@
 
 
   <!-- MAIN PRINCIPAL -->
-  <main class="piano">
+  <main class="piano" id="musica">
     <!-- DIVISOR 1 -->
     <div class="divisor-1">
       <section class="section1">
+        <article class="texto1">
         <h1>Aprende Piano</h1>
         <p>
           Nuestras clases son <em>personalizadas e individuales</em>, lo que garantiza una atención
           exclusiva y un progreso más rápido.
         </p>
+      </article>
         <div class="imagen1">
           <img src="../assets/img/piano/1.jpg" alt="teclas de piano">
         </div>
       </section>
       <section class="section2">
+        <article class="texto2">
+        <h3>Adultos y Niños</h3>
+        <p>
+          Apto para todas las edades y niveles. Anímate y reserva tu clase para conocernos.
+        </p>
+      </article>
+        <div class="imagen2">
+          <img src="../assets/img/piano/2.jpg" alt="adultos y niños tocando piano">
+        </div>
+      </section>
+      <section class="section3">
+        <article class="texto3">
         <h3>Sumate a nuestra comunidad</h3>
         <p>
           Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>. Queremos invitarte a que te sumes también en este hermoso viaje.
         </p>
-        <div class="imagen2">
-          <img src="../assets/img/piano/2.jpg" alt="pianista global">
+      </article>
+        <div class="imagen3">
+          <img src="../assets/img/piano/3.jpg" alt="pianista global">
         </div>
       </section>
 
@@ -78,7 +92,6 @@
       <section class="section3">
         <h3>Reserva tu Clase</h3>
         <img src="../assets/img/profesores/s1.jpg" alt="profesora de piano">
-        <p class="parrafo-1">¡Anímate y coordina una clase con nosotros!</p>
         <a href="contacto.html">¡Quiero mi clase!</a>
         <!-- FIN SECCION 3 -->
       </section>
@@ -113,6 +126,9 @@
   <!-- FIN BODY -->
 </body>
 
+<!-- ENLACE A JAVASCRIPT 
+<script src="assets/js/index.js"></script>
+-->
 <!-- FIN HTML -->
 
 </html>
