--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <!-- METADATOS -->
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- ENLACE A ICONOS DE FONTAWESOME -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
+  <!-- ENLACE A FAVICON -->
+  <link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/x-icon">
+  <!-- ENLACE A BOOTSTRAP -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- ENLACE A ESTILOS -->
   <link rel="stylesheet" href="css/styles.css">
-  <!-- ENLACE A ICONOS DE FONTAWESOME -->
-  <link
-  rel="stylesheet"
-  href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
-  crossorigin="anonymous">
-<!-- ENLACE A FAVICON -->
-  <link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/x-icon">
   <!-- TITULO DEL SITIO WEB -->
   <title>MusicArte - Escuela de Música</title>
   <!-- DESCRIPCION DEL SITIO WEB -->
@@ -27,28 +26,32 @@
 <body>
   <!-- HEADER -->
   <header>
-
-      <!-- MENU NAVEGACION -->
-
-    <nav class="menu">
-      <input type="checkbox" class="boton-checkbox" id="mi-check">
-      <label for="mi-check" class="boton-hamburguesa"><i class="fa fa-bars"></i></label>
-           <!-- LOGO -->
-           <label class="logo"><a href="index.html">MusicArte</a></label>
-           <label class="logo-2"><a href="index.html">♪</a></label>
-        <!-- LISTA DESORDENADA -->
-        <ul class="listado">
-            <li class="lista"><a href="#" class="active">Inicio</a></li>
-            <li class="lista"><a href="pages/piano.html">Piano</a></li>
-            <li class="lista"><a href="pages/canto.html">Canto</a></li>
-            <li class="lista"><a href="pages/violin.html">Violín</a></li>
-            <li class="lista"><a href="pages/contacto.html">Contacto</a></li>
-          </ul>
+      <!-- MENU NAVEGACION BOOTSTRAP -->
+    <nav class="navbar navbar-expand-lg fixed-top py-0" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand logo" href="#">MusicArte</a>
+        <label class="navbar-brand logo-2"><a href="#">♪</a></label>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fas fa-bars" ></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div  class="navbar-nav ms-auto">
+            <a class="nav-link rounded-3" aria-current="page" href="#">Inicio</a>
+            <a class="nav-link rounded-3" href="pages/piano.html">Piano</a>
+            <a class="nav-link rounded-3" href="pages/canto.html">Canto</a>
+            <a class="nav-link rounded-3" href="pages/violin.html">Violín</a>
+            <a class="nav-link rounded-3" href="pages/contacto.html">Contacto</a>
+          </div>
+        </div>
+      </div>
     </nav>
 
 
     <!-- FIN HEADER -->
   </header>
+
+  <!-- MAIN PRINCIPAL -->
+<main id="index">
 
       <!-- SECCION TOP -->
       <div class="section-top">
@@ -60,8 +63,6 @@
         <!-- FIN SECCION TOP -->
       </div>
 
-  <!-- MAIN PRINCIPAL -->
-<main id="index">
   <div class="main">
     <!-- SECCION 1 -->
     <section class="section1">
@@ -159,13 +160,10 @@
     <!-- FIN FOOTER -->
   </footer>
 
+  <!-- SCRIPT DE BOOTSTRAP -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <!-- FIN BODY -->
 </body>
 
-<!-- ENLACE A JAVASCRIPT
-<script src="assets/js/index.js"></script>
--->
-
 <!-- FIN HTML -->
-
 </html>
