--- a/pages/violin.html
+++ b/pages/violin.html
@@ -1,52 +1,50 @@
 ﻿<!DOCTYPE html>
-<html lang="es">
-  <!-- METADATOS -->
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- ENLACE A ESTILOS -->
-    <link rel="stylesheet" href="../css/styles.css">
-    <!-- ENLACE A ICONOS DE FONTAWESOME -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
-      crossorigin="anonymous">
-    <!-- ENLACE A FAVICON -->
-    <link
-      rel="shortcut icon"
-      href="../assets/icons/favicon.ico"
-      type="image/x-icon">
-    <!-- TITULO DEL SITIO WEB -->
-    <title>MusicArte - Escuela de Música</title>
-    <!-- DESCRIPCION DEL SITIO WEB -->
-    <meta
-      name="description"
-      content="Escuela de enseñanza de instrumentos musicales">
+<html lang="en">
+<!-- METADATOS -->
 
-    <!-- FIN DE METADATOS -->
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- ENLACE A ICONOS DE FONTAWESOME -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
+  <!-- ENLACE A FAVICON -->
+  <link rel="shortcut icon" href="../assets/icons/favicon.ico" type="image/x-icon">
+  <!-- ENLACE A BOOTSTRAP -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- ENLACE A ESTILOS -->
+  <link rel="stylesheet" href="../css/styles.css">
+  <!-- TITULO DEL SITIO WEB -->
+  <title>MusicArte - Escuela de Música</title>
+  <!-- DESCRIPCION DEL SITIO WEB -->
+  <meta name="description" content="Escuela de enseñanza de instrumentos musicales">
 
-  <!-- BODY -->
-  <body>
-   <!-- HEADER -->
+  <!-- FIN DE METADATOS -->
+</head>
+
+<!-- BODY -->
+
+<body>
+  <!-- HEADER -->
   <header>
-
-    <!-- MENU NAVEGACION -->
-
-  <nav class="menu">
-      <input type="checkbox" class="boton-checkbox" id="mi-check">
-      <label for="mi-check" class="boton-hamburguesa"><i class="fa fa-bars"></i></label>
-         <!-- LOGO -->
-         <label class="logo"><a href="../index.html">MusicArte</a></label>
-         <label class="logo-2"><a href="../index.html">♪</a></label>      <!-- LISTA DESORDENADA -->
-      <ul class="listado">
-        <li class="lista"><a href="../index.html">Inicio</a></li>
-        <li class="lista"><a href="piano.html">Piano</a></li>
-        <li class="lista"><a href="canto.html">Canto</a></li>
-        <li class="lista"><a href="#" class="active">Violín</a></li>
-        <li class="lista"><a href="contacto.html">Contacto</a></li>
-        </ul>
-  </nav>
+      <!-- MENU NAVEGACION BOOTSTRAP -->
+    <nav class="navbar navbar-expand-lg fixed-top py-0" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand logo" href="../index.html">MusicArte</a>
+        <label class="navbar-brand logo-2"><a href="../index.html">♪</a></label>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fas fa-bars" ></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div  class="navbar-nav ms-auto">
+            <a class="nav-link rounded-3" href="../index.html">Inicio</a>
+            <a class="nav-link rounded-3" href="piano.html">Piano</a>
+            <a class="nav-link rounded-3" href="canto.html">Canto</a>
+            <a class="nav-link rounded-3" aria-current="page" href="#">Violín</a>
+            <a class="nav-link rounded-3" href="contacto.html">Contacto</a>
+          </div>
+        </div>
+      </div>
+    </nav>
 
 
   <!-- FIN HEADER -->
@@ -129,12 +127,10 @@
       <!-- FIN FOOTER -->
     </footer>
 
+    <!-- SCRIPT DE BOOTSTRAP -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!-- FIN BODY -->
   </body>
-
-  <!-- ENLACE A JAVASCRIPT
-  <script src="assets/js/index.js"></script>
- -->
-
+  
   <!-- FIN HTML -->
-</html>
+  </html>
