--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,8 +24,13 @@
 <!-- BODY -->
 
 <body>
-  <!-- HEADER -->
-  <header>
+  <!-- MODO CLARO/OSCURO -->
+ <input type="checkbox" id="toggleMode">
+  <label for="toggleMode" class="toggleDark"><i class="fas fa-sun"></i></label>
+  <label for="toggleMode" class="toggleLight"><i class="fas fa-moon"></i></label>
+ <div id="container">
+ <!-- HEADER -->
+<header>
       <!-- MENU NAVEGACION BOOTSTRAP -->
     <nav class="navbar navbar-expand-lg fixed-top py-0" data-bs-theme="dark">
       <div class="container-fluid">
@@ -82,16 +87,16 @@
             name="nombre"
             required
             pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ\s]+"
-            placeholder="Escribe tu nombre"
+            placeholder="Nombre"
             >
           <label for="lastname">Apellido</label>
           <input
             type="text"
             id="lastname"
-            name="apellido"
+            name="Apellido"
             required
             pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ\s]+"
-            placeholder="Escribe tu apellido"
+            placeholder="Apellido"
             >
           <label for="edad">Edad</label>
           <input
@@ -99,7 +104,7 @@
             id="edad"
             name="edad"
             min="1"
-            placeholder="Escribe tu edad"
+            placeholder="1-100"
             required
             >
 
@@ -110,7 +115,7 @@
             name="email"
             required
             pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
-            placeholder="ejemplo@correo.com"
+            placeholder="ej@correo.com"
             >
           <label for="phone">Teléfono</label>
           <input
@@ -129,7 +134,7 @@
             rows="5"
             cols="40"
             required
-            placeholder="¡Escribe tu consulta aquí!"
+            placeholder="Escribe aquí"
           ></textarea
           >
           <div class="checkbox">
@@ -170,13 +175,15 @@
         </ul>
       </div>
 
-      <!-- FIN FOOTER -->
-    </footer>
+    <!-- FIN FOOTER -->
+  </footer>
+ </div>
+  <!-- SCRIPT DE BOOTSTRAP -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+   <!-- SCRIPT DE JAVASCRIPT -->
+  <script src="/assets/js/toogle.js"></script>
+  <!-- FIN BODY -->
+</body>
 
-    <!-- SCRIPT DE BOOTSTRAP -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <!-- FIN BODY -->
-  </body>
-  
-  <!-- FIN HTML -->
-  </html>
+<!-- FIN HTML -->
+</html>
