--- a/pages/violin.html
+++ b/pages/violin.html
@@ -25,10 +25,10 @@
 
 <body>
   <!-- MODO CLARO/OSCURO -->
- <input type="checkbox" id="toggleMode">
+  <input type="checkbox" id="toggleMode">
   <label for="toggleMode" class="toggleDark"><i class="fas fa-sun"></i></label>
+  <input type="checkbox" id="toggleMode-2">
   <label for="toggleMode" class="toggleLight"><i class="fas fa-moon"></i></label>
- <div id="container">
  <!-- HEADER -->
 <header>
       <!-- MENU NAVEGACION BOOTSTRAP -->
@@ -125,7 +125,6 @@
 
     <!-- FIN FOOTER -->
   </footer>
- </div>
   <!-- SCRIPT DE BOOTSTRAP -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <!-- FIN BODY -->
