cambios #musica seccion reserva (titulo quitado) css acomodado

--- a/pages/canto.html
+++ b/pages/canto.html
@@ -91,12 +91,11 @@
       
       <!-- DIVISOR 2 -->
       <div class="divisor-2">
-        <section class="section3">
-          <h3>Reserva tu Clase</h3>
+        <div class="section3">
           <img src="../assets/img/profesores/s2.jpg" alt="profesora de canto">
           <a href="contacto.html">Reservar</a>
           <!-- FIN SECCION 3 -->
-        </section>
+        </div>
       </div>
   
     </main>
