--- a/pages/violin.html
+++ b/pages/violin.html
@@ -92,12 +92,11 @@
     </div>
     <!-- DIVISOR 2 -->
     <div class="divisor-2">
-      <section class="section3">
-        <h3>Reserva tu Clase</h3>
+      <div class="section3">
         <img src="../assets/img/profesores/s3.jpg" alt="profesora de violín">
         <a href="contacto.html">Reservar</a>
         <!-- FIN SECCION 3 -->
-      </section>
+      </div>
     </div>
 
       <!-- FIN MAIN PRINCIPAL -->
