--- a/pages/piano.html
+++ b/pages/piano.html
@@ -91,12 +91,11 @@
     </div>
     <!-- DIVISOR 2 -->
     <div class="divisor-2">
-      <section class="section3">
-        <h3>Reserva tu Clase</h3>
+      <div class="section3">
         <img src="../assets/img/profesores/s1.jpg" alt="profesora de piano">
         <a href="contacto.html">Reservar</a>
         <!-- FIN SECCION 3 -->
-      </section>
+      </div>
     </div>
 
     <!-- FIN MAIN PRINCIPAL -->
