CSS colores estilizados + email en formulario

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -114,7 +114,7 @@
             name="email"
             required
             pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
-            placeholder="ej@correo.com"
+            placeholder="ej@email.com"
             >
           <label for="phone">Teléfono</label>
           <input
