index + bootstrap seccion 3 profesores

--- a/index.html
+++ b/index.html
@@ -118,11 +118,64 @@
           y comprometidos a ayudarte a alcanzar tus metas musicales.
         </p>
       </div>
-      <div class="divisor2">
-        <img src="assets/img/profesores/s1.jpg" alt="profesora de piano">
-        <img src="assets/img/profesores/s2.jpg" alt="profesora de canto">
-        <img src="assets/img/profesores/s3.jpg" alt="profesora de violin">
+      <div class="divisor2 container max-width-xxl">
+        <div class="row">
+          <div class="card col-md-4 col-sm-12">
+            <div class="card">
+              <div class="row">
+                <div class="col-md-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
+                  <h3 class="card-title text-center">Piano<br>Elena Martínez</h3>
+                </div>
+                <div class="col-md-12 col-sm-6">
+                  <img class="card-img-top mb-3" src="assets/img/profesores/s1.jpg" alt="Card image cap profesora de piano">
+                </div>
+                <div class="col-md-12 col-sm-12 mb-3">
+                  <p class="card-text">Con años de experiencia y un amor inquebrantable por la música, Elena guía a sus
+                    estudiantes desde los primeros acordes hasta las
+                    melodías más complejas, inspirando el talento de cada alumno, cultivando una conexión única
+                    entre el pianista y su instrumento.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card col-md-4 col-sm-12">
+            <div class="card">
+              <div class="row">
+                <div class="col-md-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
+                  <h3 class="card-title text-center">Canto<br>Laura Rivarola</h3>
+                </div>
+                <div class="col-md-12 col-sm-6">
+                  <img class="card-img-top mb-3" src="assets/img/profesores/s3.jpg" alt="Card image cap profesora de violin">
+                </div>
+                <div class="col-md-12 col-sm-12 mb-3">
+                <p class="card-text">Con su calidez y experiencia, Laura ayuda a sus estudiantes a descubrir todo
+                  su potencial
+                  vocal. Desde técnicas de respiración hasta la interpretación emocional, creando un espacio donde la música y la expresión se encuentran en perfecta armonía.</p>
+                </div>
+                </div>
+            </div>
+          </div>
+          <div class="card col-md-4 col-sm-12">
+            <div class="card">
+              <div class="row">
+                <div class="col-md-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
+                  <h3 class="card-title text-center">Violín<br>Analía Villalba</h3>
+                </div>
+                <div class="col-md-12 col-sm-6">
+                  <img class="card-img-top mb-3" src="assets/img/profesores/s2.jpg" alt="Card image cap profesora de canto">
+                </div>
+                <div class="col-md-12 col-sm-12 mb-3">
+                <p class="card-text">Con su gracia y amabilidad, Ana despierta la pasión por la música en sus
+                  alumnos. Desde los primeros pasos hasta las interpretaciones más emotivas, guiándolos con paciencia y
+                  experiencia, creando un ambiente de aprendizaje enriquecedor y lleno de inspiración.</p>
+                </div>
+                </div>
+            </div>
+          </div>
+      
+        </div>
       </div>
+
       <div class="divisor3">
         <h2>¿Dónde puedes encontrarnos?</h2>
         <p>Estamos en el barrio de Caballito.</p>
