css optimizado + correccion nombre prof index.html

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                   <img class="card-img-top mb-3" src="assets/img/profesores/s2.jpg" alt="Card image cap profesora de canto">
                 </div>
                 <div class="col-md-12 col-sm-12 mb-3">
-                <p class="card-text">Con su gracia y amabilidad, Ana despierta la pasión por la música en sus
+                <p class="card-text">Con su gracia y amabilidad, Analía despierta la pasión por la música en sus
                   alumnos. Desde los primeros pasos hasta las interpretaciones más emotivas, guiándolos con paciencia y
                   experiencia, creando un ambiente de aprendizaje enriquecedor y lleno de inspiración.</p>
                 </div>
