actualizacion index y #musica + css

--- a/pages/violin.html
+++ b/pages/violin.html
@@ -82,7 +82,7 @@
       <section class="section3">
         <h3>Sumate a nuestra comunidad</h3>
         <p>
-          Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>. Queremos invitarte a que te sumes también en este hermoso viaje.
+          Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>
         </p>
         <div class="imagen2">
           <img src="../assets/img/violin/3.jpg" alt="violinista global">
