--- a/index.html
+++ b/index.html
@@ -120,17 +120,17 @@
       </div>
       <div class="divisor2 container max-width-xxl">
         <div class="row">
-          <div class="card col-md-4 col-sm-12">
+          <div class="card col-lg-4 col-sm-12">
             <div class="card">
               <div class="row">
-                <div class="col-md-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
+                <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
                   <h3 class="card-title text-center">Piano<br>Elena Martínez</h3>
                 </div>
-                <div class="col-md-12 col-sm-6">
+                <div class="col-lg-12 col-sm-6">
                   <img class="card-img-top mb-3" src="assets/img/profesores/s1.jpg" alt="Card image cap profesora de piano">
                 </div>
-                <div class="col-md-12 col-sm-12 mb-3">
-                  <p class="card-text">Con años de experiencia y un amor inquebrantable por la música, Elena guía a sus
+                <div class="col-lg-12 col-sm-12 mb-3">
+                  <p class="card-text">Con años de experiencia y un amor inquebrantable por la música, guía a sus
                     estudiantes desde los primeros acordes hasta las
                     melodías más complejas, inspirando el talento de cada alumno, cultivando una conexión única
                     entre el pianista y su instrumento.</p>
@@ -138,36 +138,36 @@
               </div>
             </div>
           </div>
-          <div class="card col-md-4 col-sm-12">
+          <div class="card col-lg-4 col-sm-12">
             <div class="card">
               <div class="row">
-                <div class="col-md-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
+                <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
                   <h3 class="card-title text-center">Canto<br>Laura Rivarola</h3>
                 </div>
-                <div class="col-md-12 col-sm-6">
-                  <img class="card-img-top mb-3" src="assets/img/profesores/s3.jpg" alt="Card image cap profesora de violin">
+                <div class="col-lg-12 col-sm-6">
+                  <img class="card-img-top mb-3" src="assets/img/profesores/s2.jpg" alt="Card image cap profesora de violin">
                 </div>
-                <div class="col-md-12 col-sm-12 mb-3">
-                <p class="card-text">Con su calidez y experiencia, Laura ayuda a sus estudiantes a descubrir todo
+                <div class="col-lg-12 col-sm-12 mb-3">
+                <p class="card-text">Con su calidez y experiencia, ayuda a sus estudiantes a descubrir todo
                   su potencial
                   vocal. Desde técnicas de respiración hasta la interpretación emocional, creando un espacio donde la música y la expresión se encuentran en perfecta armonía.</p>
                 </div>
                 </div>
             </div>
           </div>
-          <div class="card col-md-4 col-sm-12">
+          <div class="card col-lg-4 col-sm-12">
             <div class="card">
               <div class="row">
-                <div class="col-md-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
+                <div class="col-lg-12 col-sm-6 d-flex align-items-center justify-content-center pt-3">
                   <h3 class="card-title text-center">Violín<br>Analía Villalba</h3>
                 </div>
-                <div class="col-md-12 col-sm-6">
-                  <img class="card-img-top mb-3" src="assets/img/profesores/s2.jpg" alt="Card image cap profesora de canto">
+                <div class="col-lg-12 col-sm-6">
+                  <img class="card-img-top mb-3" src="assets/img/profesores/s3.jpg" alt="Card image cap profesora de canto">
                 </div>
-                <div class="col-md-12 col-sm-12 mb-3">
-                <p class="card-text">Con su gracia y amabilidad, Analía despierta la pasión por la música en sus
+                <div class="col-lg-12 col-sm-12 mb-3">
+                <p class="card-text">Con su gracia y amabilidad, despierta la pasión por la música en sus
                   alumnos. Desde los primeros pasos hasta las interpretaciones más emotivas, guiándolos con paciencia y
-                  experiencia, creando un ambiente de aprendizaje enriquecedor y lleno de inspiración.</p>
+                  experiencia, creando un ambiente de aprendizaje inspirador.</p>
                 </div>
                 </div>
             </div>
