--- a/pages/canto.html
+++ b/pages/canto.html
@@ -81,7 +81,7 @@
         <section class="section3">
           <h3>Sumate a nuestra comunidad</h3>
           <p>
-            Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>. Queremos invitarte a que te sumes también en este hermoso viaje.
+            Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>.
           </p>
           <div class="imagen3">
             <img src="../assets/img/canto/3.jpg" alt="cantante global">
