cambios titulos h1 h3 #musica y css

--- a/pages/violin.html
+++ b/pages/violin.html
@@ -71,7 +71,7 @@
         </div>
       </section>
       <section class="section2">
-        <h3>Adultos y Niños</h3>
+        <h3>Clases: Adultos y Niños</h3>
         <p>
           Apto para todas las edades y niveles. Anímate y reserva tu clase para conocernos.
         </p>
@@ -80,7 +80,7 @@
         </div>
       </section>
       <section class="section3">
-        <h3>Sumate a nuestra comunidad</h3>
+        <h3>Únete a nosotros</h3>
         <p>
           Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>
         </p>
