--- a/pages/canto.html
+++ b/pages/canto.html
@@ -70,7 +70,7 @@
           </div>
         </section>
         <section class="section2">
-          <h3>Adultos y Niños</h3>
+          <h3>Clases: Adultos y Niños</h3>
           <p>
             Apto para todas las edades y niveles. Anímate y reserva tu clase para conocernos.
           </p>
@@ -79,7 +79,7 @@
           </div>
         </section>
         <section class="section3">
-          <h3>Sumate a nuestra comunidad</h3>
+          <h3>Únete a nosotros</h3>
           <p>
             Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>.
           </p>
