index = carousel bootstrap + #musica section contacto modificaciones + css adaptacion a estos cambios

--- a/index.html
+++ b/index.html
@@ -59,11 +59,30 @@
   <div class="main">
           <!-- SECCION TOP -->
           <div class="section-top">
-            <img src="assets/img/index/h1.jpg"
-              alt="representación artística de un piano en una pintura hiperrealista al óleo">
-            <img src="assets/img/index/h2.png"
-              alt="representación artística de una cantante en una pintura hiperrealista al óleo">
-            <img src="assets/img/index/h3.jpg" alt="representación artística de un violín en una pintura estilo Art-decó">
+            <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="/assets/img/index/top1.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="/assets/img/index/top2.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="/assets/img/index/top3.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="/assets/img/index/top4.jpg" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
             <!-- FIN SECCION TOP -->
           </div>
 
