--- a/pages/piano.html
+++ b/pages/piano.html
@@ -91,11 +91,15 @@
     </div>
     <!-- DIVISOR 2 -->
     <div class="divisor-2">
-      <div class="section3">
+      <section class="section4">
+        <a href="contacto.html">Contactar</a>
+        <p>
+          Te estamos esperando. <em>Toma tu primera clase.</em>
+        </p>
+        <div class="imagen3">
         <img src="../assets/img/profesores/s1.jpg" alt="profesora de piano">
-        <a href="contacto.html">Reservar</a>
-        <!-- FIN SECCION 3 -->
-      </div>
+        </div>
+      </section>
     </div>
 
     <!-- FIN MAIN PRINCIPAL -->
