--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="/assets/img/index/top1.jpg" class="d-block w-100" alt="...">
+                  <img src="assets/img/index/top1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="/assets/img/index/top2.jpg" class="d-block w-100" alt="...">
+                  <img src="assets/img/index/top2.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="/assets/img/index/top3.jpg" class="d-block w-100" alt="...">
+                  <img src="assets/img/index/top3.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="/assets/img/index/top4.jpg" class="d-block w-100" alt="...">
+                  <img src="assets/img/index/top4.jpg" class="d-block w-100" alt="...">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
