actualizacion para preentrega-2

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 <body>
   <!-- MODO CLARO/OSCURO -->
- <input type="checkbox" id="toggleMode">
-  <label for="toggleMode" class="toggleDark"><i class="fas fa-sun"></i></label>
-  <label for="toggleMode" class="toggleLight"><i class="fas fa-moon"></i></label>
+  <input type="checkbox" id="toggleMode">
+  <label for="toggleMode" class="toggleDark" title="Cambiar a modo claro"><i class="fas fa-sun"></i></label>
+  <label for="toggleMode" class="toggleLight" title="Cambiar a modo oscuro"><i class="fas fa-moon"></i></label>
  <!-- HEADER -->
 <header>
       <!-- MENU NAVEGACION BOOTSTRAP -->
@@ -87,10 +87,9 @@
     <section class="section1">
       <h1>Descubre la <strong>música</strong></h1>
       <p>
-        En <strong>MusicArte</strong> nos comprometemos en la
-        <em>calidad de la enseñanza musical</em> con
-        <strong>profesionales</strong> apasionados y con experiencia. ¡Únete a
-        nuestra comunidad y comienza tu viaje musical hoy mismo!
+        En <strong>MusicArte</strong> nos comprometemos con la
+        <em>calidad de la enseñanza</em> con
+        <strong>músicos profesionales</strong> apasionados y con experiencia.
       </p>
     </section>
     <!-- FIN SECCION 1 -->
@@ -102,7 +101,7 @@
         <img src="assets/img/index/j2.jpg" alt="madre e hijo practicando violin">
         <img src="assets/img/index/j3.png" alt="niña practicando piano">
         <div class="divisor-texto">
-          <h3>Aprende</h3>
+          <h3>Adultos/Niños</h3>
           <p>
             Nuestros programas están diseñados para
             <em>todas las edades y niveles.</em>
@@ -117,7 +116,7 @@
           <h3>Instrumentos</h3>
           <p>
             Elige nuestras <strong>clases</strong> de <em>piano</em>,
-            <em>canto</em> y/o <em>violín</em>. ¡Desarrolla tu pasión musical!
+            <em>canto</em> o <em>violín</em> y desarrolla tu pasión musical.
           </p>
         </div>
       </div>
@@ -129,9 +128,9 @@
       <div class="divisor1">
         <h2>Profesores Calificados</h2>
         <p>
-          Nuestro equipo de profesores está formado por
+          Nuestro equipo de docentes está formado por
           <strong>músicos profesionales</strong>
-          y comprometidos a ayudarte a alcanzar tus metas musicales.
+          comprometidos a ayudarte a alcanzar tus metas.
         </p>
       </div>
       <div class="divisor2 container max-width-xxl">
