--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -26,8 +26,8 @@
 <body>
   <!-- MODO CLARO/OSCURO -->
   <input type="checkbox" id="toggleMode">
-  <label for="toggleMode" class="toggleDark"><i class="fas fa-sun"></i></label>
-  <label for="toggleMode" class="toggleLight"><i class="fas fa-moon"></i></label>
+  <label for="toggleMode" class="toggleDark" title="Cambiar a modo claro"><i class="fas fa-sun"></i></label>
+  <label for="toggleMode" class="toggleLight" title="Cambiar a modo oscuro"><i class="fas fa-moon"></i></label>
  <!-- HEADER -->
 <header>
       <!-- MENU NAVEGACION BOOTSTRAP -->
@@ -59,7 +59,7 @@
       <div class="contenedor">
       <!-- SECCION 1 -->
       <section class="section1">
-        <h1>Aprende con nosotros</h1>
+        <h1>Aprende<br>con nosotros</h1>
         <!-- FIN SECCION 1 -->
       </section>
 
@@ -68,9 +68,8 @@
         <div>
           <h2>Reserva tu Clase</h2>
           <p>
-            ¿Listo para comenzar tu viaje <em>musical</em>? Estamos aquí para
-            ayudarte a alcanzar tus <em>metas musicales</em> y estamos ansiosos
-            por conocerte. ¡Te estamos esperando!
+            ¿Listo para comenzar?<br>Estamos aquí para
+            ayudarte a alcanzar tus <em>metas musicales</em>.<br>¡Te estamos esperando!
           </p>
         </div>
       </section>
