--- a/pages/piano.html
+++ b/pages/piano.html
@@ -26,8 +26,8 @@
 <body>
   <!-- MODO CLARO/OSCURO -->
   <input type="checkbox" id="toggleMode">
-  <label for="toggleMode" class="toggleDark"><i class="fas fa-sun"></i></label>
-  <label for="toggleMode" class="toggleLight"><i class="fas fa-moon"></i></label>
+  <label for="toggleMode" class="toggleDark" title="Cambiar a modo claro"><i class="fas fa-sun"></i></label>
+  <label for="toggleMode" class="toggleLight" title="Cambiar a modo oscuro"><i class="fas fa-moon"></i></label>
  <!-- HEADER -->
 <header>
       <!-- MENU NAVEGACION BOOTSTRAP -->
@@ -60,26 +60,26 @@
     <!-- DIVISOR 1 -->
     <div class="divisor-1">
       <section class="section1">
-        <h1>Aprende Piano</h1>
+        <h1>Aprende<br>Piano</h1>
         <p>
-          Nuestras clases son <em>personalizadas e individuales</em>, lo que garantiza una atención
-          exclusiva y un progreso más rápido.
+          Nuestras clases son <em>personalizadas e individuales</em>, garantizando mayor atención
+          y progreso.
         </p>
         <div class="imagen1">
           <img src="../assets/img/piano/1.jpg" alt="teclas de piano">
         </div>
       </section>
       <section class="section2">
-        <h3>Clases: Adultos y Niños</h3>
+        <h3>Adultos<br>Niños</h3>
         <p>
-          Apto para todas las edades y niveles. Anímate y reserva tu clase para conocernos.
+          Apto para todas las edades y niveles.<br>Anímate y reserva tu clase para conocernos.
         </p>
         <div class="imagen2">
           <img src="../assets/img/piano/2.jpg" alt="adultos y niños tocando piano">
         </div>
       </section>
       <section class="section3">
-        <h3>Únete a nosotros</h3>
+        <h3>Únete<br>a<br>nosotros</h3>
         <p>
           Muchos músicos alrededor del mundo <em>iniciaron su camino con nosotros</em>
         </p>
@@ -94,7 +94,7 @@
       <section class="section4">
         <a href="contacto.html">Contactar</a>
         <p>
-          Te estamos esperando. <em>Toma tu primera clase.</em>
+          Te estamos esperando.<br><em>Toma tu primera clase.</em>
         </p>
         <div class="imagen3">
         <img src="../assets/img/profesores/s1.jpg" alt="profesora de piano">
