correcciones index section2

--- a/index.html
+++ b/index.html
@@ -97,9 +97,10 @@
     <!-- SECCION 2 -->
     <section class="section2">
       <div class="divisor">
-        <img src="assets/img/index/j1.jpg" alt="varios micrófonos para cantantes">
+        <div class="divisor-imagen">
         <img src="assets/img/index/j2.jpg" alt="madre e hijo practicando violin">
         <img src="assets/img/index/j3.png" alt="niña practicando piano">
+      </div>
         <div class="divisor-texto">
           <h3>Adultos/Niños</h3>
           <p>
@@ -109,9 +110,10 @@
         </div>
       </div>
       <div class="divisor">
-        <img src="assets/img/index/i1.jpg" alt="un violin apoyado sobre una partitura">
+        <div class="divisor-imagen">
         <img src="assets/img/index/i2.png" alt="padre e hija practicando canto">
         <img src="assets/img/index/i3.jpg" alt="padre e hijo practicando piano">
+      </div>
         <div class="divisor-texto">
           <h3>Instrumentos</h3>
           <p>
